added password recovery
